Develop branch update

--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
     <link rel="stylesheet" href="styling.css">
 </head>
 <body>
-    
+    <p>This was added in the develop branch!</p>
 </body>
 </html>
