--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="styling.css">
 </head>
 <body>
-    <p>This was added in the develop branch!</p>
+    <p id="itwasntme">This was added in the develop branch!</p>
+    <p id="poo">Cole is a stinky doo doo head!!!</p>
 </body>
 </html>
